# selection-of-vacancies

./: README.md  pyproject.toml
src/: .~lock.Vacancies_for_you.xlsx#  Vacancies_for_you  Vacancies_for_you.json  Vacancies_for_you.xlsx  data_from_sites.py  getting_vacancies.py  job_listings.csv  receiving_data.py  user_interaction.py  vacancies_for_tou.txt  work_with_vacancies.py  working_with_csv.py  working_with_file.py  working_with_txt.py  working_with_xlsx.py
