[tool.poetry]
name = "mary"
version = "0.1.0"
description = ""
authors = ["Mary <kass.o@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
ignore_missing_imports = true

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # исключить несколько общих каталогов в
    | \.git          # корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # также отдельно исключить файл с именем foo.py в
                     # корне проекта
)
'''

[tool.isort]
line_length = 119
